# 6_axis_robotic_arm

./: README.md
install/: local_setup.sh  setup.sh
install/robotic_arm/share/robotic_arm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/robotic_arm_bringup/share/robotic_arm_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml  package.zsh
install/robotic_arm_description/share/robotic_arm_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/robotic_arm_gazebo/share/robotic_arm_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/robotic_arm_moveit_config/share/robotic_arm_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/robotic_arm_sys_test/lib/robotic_arm_sys_test/: arm_gripper_loop_controller  arm_gripper_loop_controller.py
install/robotic_arm_sys_test/share/robotic_arm_sys_test/: local_setup.bash  (+9 more)
log/: latest_build
src/robotic_arm/robotic_arm/: package.xml
src/robotic_arm/robotic_arm_bringup/: CMakeLists.txt
src/robotic_arm/robotic_arm_description/: CMakeLists.txt  package.xml
src/robotic_arm/robotic_arm_gazebo/: CMakeLists.txt  package.xml
src/robotic_arm/robotic_arm_moveit_config/: CMakeLists.txt  package.xml
src/robotic_arm/robotic_arm_sys_test/: CMakeLists.txt
(+464 files in other folders)
