<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotic_arm</name>
  <version>0.0.0</version>
  <description>Me ARM meta package</description>
  <maintainer email="achborjoshua@gmail.com">Achbor</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robotic_arm_description</exec_depend>
  <exec_depend>robotic_arm_bringup</exec_depend>
  <exec_depend>robotic_arm_gazebo</exec_depend>
  <exec_depend>robotic_arm_moveit_config</exec_depend>
  <exec_depend>robotic_arm_sys_test</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
